# fomc-causal-extraction

./: .env.example  .gitignore  CRASH_RESILIENCE_SUMMARY.txt  IMPLEMENTATION_SUMMARY.txt  README.md  config.yaml  paper_draft.tex  pyproject.toml
docs/: CPSC532V_Proposal_Final.docx  fomc_causal_extraction_presentation.pptx  paper_draft.aux  paper_draft.out  references.bib  ~$fomc_causal_extraction_presentation.pptx
documentation/: BATCH_API_GUIDE.md  JSON_SCHEMA_SUMMARY.txt  WORKFLOW_GUIDE.md
notebooks/: 01_data_exploration.ipynb  02_extraction_run.ipynb  03_analysis_and_viz.ipynb  04_knowledge_graphs.ipynb  10_key_insights.md
src/: analyze_error_passages.py  batch_state.py  build_annotation_csv.py  config.py  data_pipeline.py  extractor.py  judge.py  preprocessor.py  prompts.py  sanity_check.py  standardize_terms.py
src/graph_scripts/: build_knowledge_graph.py  graph_statistics.py  visualize_knowledge_graph.py
src/models/: __init__.py  base.py  gemini.py  github_models.py  openai_model.py  schemas.py
